# JTPCP

./: CMakeLists.txt  Config.ini  Requirements.docx  SPEC.docx
JClient/: CMakeLists.txt  main.cpp  main_win.cpp
JServer/: CMakeLists.txt  main.cpp  main_win.cpp
JTool/: CMakeLists.txt  INIReader.cpp  log.cpp  log.h  tool.cpp  tool.h
PCProtocol/: CMakeLists.txt  PlayControlAct.cpp  PlayControlAct.h
Test/: CMakeLists.txt  main.cpp
